refactor: move low_quility_photos to photos object and rename to blur_image_data_url
