# viewmodels/cocktail.go
@@ -29,9 +29,7 @@ type PopularCocktailList struct {
 	//required: true
 	Title string `json:"title"`
 	//required: true
-	Photos []string `json:"photos"`
-	//required: true
-	LowQualityPhotos []string `json:"low_quality_photos"`
+	Photos []CocktailPhotoWithoutIDInResponse `json:"photos"`
 	//required: true
 	IngredientList []CocktailIngredientWithoutIDInResponse `json:"ingredient_list"`
 	//required: true
@@ -184,6 +182,22 @@ type CocktailPhotoWithIDInResponse struct {
 	ID int64 `json:"id"`
 	//required: true
 	ImagePath string `json:"image_path"`
+	//required: true
+	BlurImageDataURL string `json:"blur_image_data_url"`
+}
+
+type CocktailPhotoWithoutIDInResponse struct {
+	//required: true
+	ImagePath string `json:"image_path"`
+	//required: true
+	BlurImageDataURL string `json:"blur_image_data_url"`
+}
+
+type DraftCocktailPhotoWithIDInResponse struct {
+	//required: true
+	ID int64 `json:"id"`
+	//required: true
+	ImagePath string `json:"image_path"`
 }
 
 type GetCocktailByIDRequest struct {
@@ -217,8 +231,6 @@ type GetCocktailByIDResponse struct {
 	//required: true
 	Photos []CocktailPhotoWithIDInResponse `json:"photos"`
 	//required: true
-	LowQualityPhotos []string `json:"low_quality_photos"`
-	//required: true
 	Title string `json:"title"`
 	//required: true
 	Description string `json:"description"`
@@ -243,7 +255,7 @@ type GetCocktailDraftByIDResponse struct {
 	//required: true
 	CocktailID int64 `json:"cocktail_id"`
 	//required: true
-	Photos []CocktailPhotoWithIDInResponse `json:"photos"`
+	Photos []DraftCocktailPhotoWithIDInResponse `json:"photos"`
 	//required: true
 	Title string `json:"title"`
 	//required: true
